<resources>
    <string name="app_name">CRUDArchivos</string>
    <string name="titAsignaturas">Asignaturas</string>
    <string name="nomAsignatura">Nombre Asignatura</string>
    <string name="agregarAsignatura">Agregar Asignatura</string>
    <string name="editarAsignatura">Editar Asignatura</string>
    <string name="nomDocente">Nombre Docente</string>
    <string name="numeroCreditos">Numero Creditos</string>
    <string name="guardar">Guardar</string>
    <string name="labNombreDocente">Nombre Docente:</string>
    <string name="labNombreAsignatura">Nombre Asignatura:</string>
    <string name="labSemestre">Semestre:</string>
    <string name="labCreditos">Creditos:</string>
    <string name="error_input">Espacio Requerido</string>
    <string-array name="semestres_spinner">
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
        <item>Sexto</item>
        <item>Septimo</item>
        <item>Octavo</item>
        <item>Noveno</item>
        <item>Decimo</item>
    </string-array>
    <string name="archivoAsignaturas">Asignaturas</string>
    <string name="title_activity_main_editar">Asignaturas</string>
    <string name="codigo_asignatura">Codigo Asignatura</string>
    <string name="title_activity_buscar_asignatura">BuscarAsignatura</string>
    <string name="title_activity_buscar">Buscar Asignatura</string>

</resources>
