<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AgregarAsignatura">

    <TextView
        android:id="@+id/txtAgregarAsignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:gravity="center"
        android:text="@string/agregarAsignatura"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <EditText
        android:id="@+id/txtNomDocente"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/vectorcuadrosagregar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nomDocente"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomAsignatura" />

    <EditText
        android:id="@+id/txtNumCreditos"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/vectorcuadrosagregar"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/numeroCreditos"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomDocente" />

    <EditText
        android:id="@+id/txtNomAsignatura"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/vectorcuadrosagregar"
        android:ems="10"
        android:focusedByDefault="true"
        android:gravity="center"
        android:hint="@string/nomAsignatura"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="178dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btnguardar"
        android:onClick="agregarAsignatura"
        android:text="@string/guardar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSemestre" />

    <Spinner
        android:id="@+id/spinnerSemestre"
        android:layout_width="221dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumCreditos" />

</android.support.constraint.ConstraintLayout>